--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,116 @@
     transform: rotate(360deg);
   }
 }
+
+.img-app {
+  display: block;
+  justify-content: center;
+  margin: 2em auto;
+  width: 90%;
+  border-radius: 3px;
+}
+
+table {
+  margin: 2em auto;
+  width: 60%;
+}
+
+thead {
+  background-color: lightskyblue;
+}
+
+tbody tr {
+  background-color: lightcyan;
+}
+
+.easy {
+  background-color: lightgreen;
+}
+
+tbody tr td button {
+  margin: 0;
+  padding: 0;
+  background-color: lightcyan;
+  border: none;
+  border-radius: 0;
+}
+tbody tr td:nth-child(4) {
+  padding: 0 !important;
+}
+tbody tr td:nth-child(3) {
+  text-align: center;
+}
+
+.button-container2 {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+tbody tr td button:hover {
+  color: white;
+  background-color: lightcoral;
+}
+
+.medium {
+  background-color: rgb(244, 245, 179);
+}
+
+.hard {
+  background-color: lightsalmon;
+}
+
+h1,
+p {
+  text-align: center;
+}
+
+.button-container {
+  margin-top: 1em;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+button {
+  width: 120px;
+  height: 40px;
+  border: 2px solid lightgreen;
+  border-radius: 3px;
+}
+
+button:hover {
+  color: black;
+  background-color: lightgreen;
+}
+
+fieldset {
+  margin: 2em auto;
+  width: 60%;
+  border-radius: 3px;
+}
+
+label {
+  margin-top: 2em;
+  display: block;
+}
+
+form {
+  display: flex;
+  justify-content: center;
+}
+
+form > div {
+  width: 80%;
+}
+
+input,
+textarea,
+select {
+  padding: 5px;
+  margin-bottom: 1em;
+  border: 1px solid black;
+  border-radius: 3px;
+  width: 100%;
+}
